 * 詳細表示の名前表示部分を右クリックすることで、発言者のユーザー情報確認、フォロー・フォロー解除が行えるようにした
 * 詳細発言表示での右クリックメニューからユーザー情報の確認ができるようにした
 * 画面が白くなる問題に対処
 * 未読カウントがずれる問題に対処
 * 右クリックメニュー、操作メニューにプロフィール表示を追加。ショートカットキーはAlt+P。
 * カラムにソート方向を常時表示するようにした
 * Altキー2回押しでフォーカスがSplitContainerに移る不具合修正
 * 自身のバージョン取得方法変更
 * 自身のファイルバージョンが取れなかった場合は、メッセージ表示
 * ユーザー情報表示の際に、最新発言に関しての情報が抜け落ちることがあるのでそのような場合でもとりあえず表示できるようにした
==== Ver 0.8.9.3(2010/05/15)
 * Alt+Shift+R,Ctrl+Qが効かない場合があったバグを修正
 * Replyタブの初期設定での更新間隔を180秒に。バージョンアップの方は手動で調整してください。
 * ユーザー情報ダイアログで自己紹介の部分をhtml化して表示するようにした。サムネイルと右クリックメニュー以外は、@IDやハッシュタグのリンク化など、詳細表示とほぼ同等の機能があります。
 * ユーザー情報ダイアログでクリックしてジャンプできる場所はツールチップでジャンプ先URLを表示するようにした
 * ユーザー情報ダイアログで最新の発言を表示するようにした。日時とSourceも表示します。
 * ユーザー情報ダイアログの発言、自己紹介の各表示エリアで右クリックからコピー・すべて選択ができるようにした
 * ユーザー情報ダイアログでフォロー状況の取得に失敗した際のエラー処理が抜けていたのを修正
 * ユーザー情報ダイアログで認証済みアカウントかどうかを表示するように
 * 画像サムネイルのSplitterDistanceが復元されないことがあるバグ修正
 * 投稿時に投稿完了を待たないように変更。投稿失敗はメッセージで通知し、リトライ・キャンセルを選べるように。
 * ふぁぼったーのURL変更
 * メニューの「片思いユーザーリスト取得」＞「すべて再取得」を廃止。直接「片思いユーザーリスト取得」をクリックしてください。
 * API使用数簡易計算の表示が、設定画面表示直後に更新されないバグを修正
 * API使用数簡易計算の更新タイミングがわかりにくかったので再計算ボタンを追加
 * 詳細表示の発言者名をクリックした際にHomeを開くようにした。ジャンプ先はツールチップで確認できます。
 * ニコニコ動画ID自動リンクの条件を緩和した
 * 短縮URLの展開で、結果を一部キャッシュしていたが、キャッシュの大文字・小文字区別をしていないバグ修正
==== Ver 0.8.9.2(2010/05/09)
 * 言及先の抽出ができていなかったバグを修正
 * ユーザー情報ダイアログで、アイコンの元画像サイズを考慮していなかったのを修正
 * ハッシュタグ解析で、アルファベットに数字が続くハッシュタグを正しく認識できていなかったのを修正
 * ユーザー情報ダイアログからフォロー/フォロー解除した場合に、フォロー状態表示をすぐ変更するようにした
==== Ver 0.8.9.1(2010/05/09)
 * 投稿重複、投稿規制をエラー扱いに
 * タブメニューを開く際に例外が起こるバグ修正
 * タイムライン解析で例外が起こるバグ修正
 * 初回起動時に認証せずに設定画面を閉じた場合に確認メッセージが2回出て正常に終了されないバグ修正
 * リスト選択画面からrefreshボタン削除
 * 画像プレビュー機能の有効無効設定を追加
 * バージョンアップ確認ダイアログのデフォルトボタン変更
 * 公式検索、ListsタブでFav追加・削除時に未読状態になる場合があったバグ修正
 * DMを右クリックあるいは操作メニューから削除できないことがあるバグ修正
 * カラムヘッダをクリックした際に、ソート方向を表示するようにした
 * ユーザー情報表示ダイアログを追加。プロフィールなどが見れます。フォロー状況の表示、フォロー/フォロー解除もダイアログからできます。APIを2消費します。
 * 設定画面に1時間あたりのAPI使用数を簡易計算して表示するようにした。Listsタブも反映されます。
==== Ver 0.8.9.0(2010/05/03)
 * Webモード廃止