@@ -15,6 +15,7 @@
  * 自身のバージョン取得方法変更
  * 自身のファイルバージョンが取れなかった場合は、メッセージ表示
  * ユーザー情報表示の際に、最新発言に関しての情報が抜け落ちることがあるのでそのような場合でもとりあえず表示できるようにした
+ * 画像プレビューをTumblrに対応(posttype=photoのみの対応となります)
 ==== Ver 0.8.9.3(2010/05/15)
  * Alt+Shift+R,Ctrl+Qが効かない場合があったバグを修正
  * Replyタブの初期設定での更新間隔を180秒に。バージョンアップの方は手動で調整してください。
